--- a/src/less/header.less
+++ b/src/less/header.less
@@ -1,7 +1,6 @@
 .navbar-brand {
     font-family:    'creepygirl';
-    font-size:      @font-size-large * 3;
-    margin-top:     15px;
+    font-size:      @font-size-large * 2;
     .text-shadow;    
 }
 
